json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1559,7 +1559,7 @@
     "employmentType": "UNSET",
     "published": "May 22, 2018 3:20:29 AM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "Meditech Contractor, Remote - Jobmote<div><div><h2>Meditech Contractor, Remote</h2><h5>Harmony Healthcare IT</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Company Description:</strong></p><p>Harmony Healthcare IT (HHIT) provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p><p><strong>We are seeking a resource with the following skills:</strong></p><p>In-depth knowledge of MEDITECH system, including:</p><ul><li>Modules<ul><li>Accounts Payable</li><li>Abstracting</li><li>General Ledger</li><li>Materials Management</li><li>Clinical, including EMR</li><li>Billing and Accounts Receivable</li><li>HR/Payroll</li></ul></li><li>Understanding of the following MEDITECH technologies/features/challenges<ul><li>EMR view</li><li>Purging</li><li>Meditor Files</li><li>Other system generated files</li></ul></li><li>Understanding/access to MEDITECH programs/stored procedures used to calculate certain columns</li><li>Understanding of MEDITECH Magic, Client Server, and 6.x</li><li>Understanding of the hierarchical MEDITECH data structures used to house the data</li><li>SQL, specifically Microsoft SQL Server</li><li>Potentially (nice-to-have) working knowledge of basic ETL functions</li></ul><p><strong>Overview of Responsibilities:</strong></p><ul><li>We are ideally looking for someone to come on-site to our South Bend office for a couple of weeks to learn our process and the scope of the upcoming MEDITECH projects. After that, the ability to work 100% remote is possible.</li><li>This resource will be asked to create views to meet the customer requirement. Strong knowledge of MEDITECH and how all the data relates together is required to be successful in this role.</li><li>Depending on the scope of the extract (already provided from another vendor), this resource would, potentially, be responsible for creating system generated documents out of the MEDITECH database once extracted.</li><li>We will also rely on this resource to have a strong understanding of the calculated fields in MEDITECH and, potentially, have access to the logic itself and the ability to 'decode' it.</li><li>This resource would report to the Director of ETL &amp; Data Management</li><li>No MEDITECH extraction is required for this role - this includes NPR reports</li><li>All IP would become the property of Harmony Healthcare IT and we would be free to use it on future projects</li></ul><p>Company DescriptionHarmony Healthcare IT provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
+    "content": "Meditech Contractor, Remote - Jobmote<div><div><h2>Meditech Contractor, Remote</h2><h5>Harmony Healthcare IT</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Company Description:</strong></p><p>Harmony Healthcare IT (HHIT) provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p><p><strong>We are seeking a resource with the following skills:</strong></p><p>In-depth knowledge of MEDITECH system, including:</p><ul><li>Modules<ul><li>Accounts Payable</li><li>Abstracting</li><li>General Ledger</li><li>Materials Management</li><li>Clinical, including EMR</li><li>Billing and Accounts Receivable</li><li>HR/Payroll</li></ul></li><li>Understanding of the following MEDITECH technologies/features/challenges<ul><li>EMR view</li><li>Purging</li><li>Meditor Files</li><li>Other system generated files</li></ul></li><li>Understanding/access to MEDITECH programs/stored procedures used to calculate certain columns</li><li>Understanding of MEDITECH Magic, Client Server, and 6.x</li><li>Understanding of the hierarchical MEDITECH data structures used to house the data</li><li>SQL, specifically Microsoft SQL Server</li><li>Potentially (nice-to-have) working knowledge of basic ETL functions</li></ul><p><strong>Overview of Responsibilities:</strong></p><ul><li>We are ideally looking for someone to come on-site to our South Bend office for a couple of weeks to learn our process and the scope of the upcoming MEDITECH projects. After that, the ability to work 100% remote is possible.</li><li>This resource will be asked to create views to meet the customer requirement. Strong knowledge of MEDITECH and how all the data relates together is required to be successful in this role.</li><li>Depending on the scope of the source (already provided from another vendor), this resource would, potentially, be responsible for creating system generated documents out of the MEDITECH database once extracted.</li><li>We will also rely on this resource to have a strong understanding of the calculated fields in MEDITECH and, potentially, have access to the logic itself and the ability to 'decode' it.</li><li>This resource would report to the Director of ETL &amp; Data Management</li><li>No MEDITECH extraction is required for this role - this includes NPR reports</li><li>All IP would become the property of Harmony Healthcare IT and we would be free to use it on future projects</li></ul><p>Company DescriptionHarmony Healthcare IT provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
   },
   {
     "id": "IY9-LR9sRF2nKDJ9BpreSQ",
@@ -2954,75 +2954,6 @@
     "published": "Apr 25, 2018 7:34:55 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "JOB TYPE: Long Term<br />3+ months<br /><br />EXPERIENCE: beginner<br /><br />SKILLS: <br />• Microsoft Office Suite<br /><br />We are looking for a bilingual person, fluent in English, capable of working 8 hrs during day time on Miami time zone, but we do have some flexibility. Responsible, motivated and proactive capable of working in a team and work really good with dead lines. You will also need to have experience in Microsoft Office package, especially excel, for the rest you will be trained. We need some one to start right away, this is a great work from home opportunity for the right person. Must have: Paypal account to receive your payment every 15 days Computer with a stable internet connection"
-  },
-  {
-    "id": "pToLQ5SxQymGLfthKzNhOg",
-    "url": "http://jobmote.com/jobs/6968-workday-financial-reporting-remote-or-100-relocaton-041718",
-    "title": "Workday - Financial & Reporting - REMOTE or 100% RELOCATON (041718)",
-    "tags": [
-      "DBG:surround``fulltim 4N remot",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 24, 2018 10:23:43 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "Workday - Financial &amp; Reporting - REMOTE or 100% RELOCATON (041718) - Jobmote<div><div><h2>Workday - Financial &amp; Reporting - REMOTE or 100% RELOCATON (041718)</h2><h5>Professional Services Firm</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>WORKDAY - Financial &amp; Financial Reporting - REMOTE</strong></p><ul><li><strong>Contract or Full-time (H1B Processing and Green card if necessary)</strong></li><li><strong>Remote.</strong> </li><li><strong>Client based in Boston, MA</strong></li><li><p><strong>100% RELOCATION if considering full-time</strong></p></li><li><p><strong>WORKDAY Financials - 1-2 years of Workday</strong></p></li><li><p><strong>5-7 years of ERP - Financials - Oracle, Peoplesoft, SAP, et</strong></p></li></ul><p><strong></strong>** Responsibilities**</p><ul><li>MUST HAVE strong technical or functional knowledge of Financial core business processes</li><li>Strong systems analysis and support background, having demonstrated ability to learn and apply new technologies to solve business challenges</li><li>This position includes a combination of business/systems analysis and application support responsibilities.</li><li>Strong Workday Financial Reporting</li></ul><p><strong>Duties</strong></p><ul><li>Perform core setup data and cross functional configurations as determined appropriate</li><li>Responsible for developing reports and providing report administration for custom reports used by various users across the firm</li></ul><p>Company DescriptionProfessional Service Cloud Firm</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
-  },
-  {
-    "id": "hBBcxfbuS4yQnWg-ZsFrpg",
-    "url": "https://remote.com/jobs/browse/preview/scrum-master-9",
-    "title": "Scrum Master",
-    "tags": [
-      "DBG:surround``2W( OR(100,fulli,entir), remot)",
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 23, 2018 3:27:15 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "JOB TYPE: Full time<br /><br />LOCATION: <br />Remote<br />Anywhere in<br />Ukraine<br /><br />EXPERIENCE: beginner<br /><br />COMPANY: StarOfService; 75-100 employees; 75-100% remote;<br /><br />SKILLS: <br />• Scrum Master<br />• Agile Scrum<br /><br />We are a fast growing dynamic startup and a market leader in Europe. Our product is adopted for 80+countries world-wide (which is interesting and definitely a challenge). AWS is used and our servers are running in 7 different regions at all continents (well except Antarctica!)<br />We are looking for a passionate Scrum master looking at building something great; in terms of user experience, code quality, best practices and best technologies.<br /><br />● This will be a full-time long term remote freelancing contract (40hrs/week, can run for years)<br />● Knowing good level of English is important and required to work in a multicultural team<br />● Available to join ASAP<br /><br />The Scrum Master is responsible for the administrative, coaching and leadership roles that make Scrum<br />development/delivery possible.<br /><br />Contact us directly through Skype: shvetsolga.p / Mail: olga@starofservice.com (as mentioned on the Invitation Mail for an appointment to discuss the details in an initial discussion. The selection process is simple: HR > Technical interview (+a short case study) > Next 1 final meeting to discuss and finalize contract terms/payment terms etc.<br /><br />Required skills<br />● Minimum 2 years of professional experience as a Scrum Master<br />● The ability and willingness to adapt to an evolving and growing development team<br />● Ability to plan and manage projects<br />● Good communication, facilitation and presentation skills<br />● Excellent analytical and problem solving skills<br />● Team player with pro-activeness to initiate things, and willingness to execute well<br /><br />Responsibilities<br />● Design and evangelize processes of development<br />● Make people own the process<br />● Facilitate continuous improvement for teams and product line<br />● Promote Agile software development method<br />● Coach and mentor others so that they may realize the benefits of Agile method<br />● Provide presentations to remote teams as needed<br />● Help your teams achieve their goals and enjoy a unified sense of accomplishment<br />● Moderate and facilitate Agile team activities such as daily standups, retrospectives, sprint reviews,<br />sprint and release planning etc.Aid in Agile team formation<br />● Self-manage"
   }
 ]
 }
