json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,198 @@
 {
  "items": [
   {
+    "id": "SRmoNiyKR_y_6Wk_ch83Fw",
+    "url": "http://jobmote.com/jobs/14631-meditech-contractor-remote",
+    "title": "Meditech Contractor, Remote",
+    "tags": [
+      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG_TECH1:k/t/w:sql-server/dotnet/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=1, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 24, 2018 1:21:43 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "Meditech Contractor, Remote - Jobmote<div><div><h2>Meditech Contractor, Remote</h2><h5>Harmony Healthcare IT</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Company Description:</strong></p><p>Harmony Healthcare IT (HHIT) provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p><p><strong>We are seeking a resource with the following skills:</strong></p><p>In-depth knowledge of MEDITECH system, including:</p><ul><li>Modules<ul><li>Accounts Payable</li><li>Abstracting</li><li>General Ledger</li><li>Materials Management</li><li>Clinical, including EMR</li><li>Billing and Accounts Receivable</li><li>HR/Payroll</li></ul></li><li>Understanding of the following MEDITECH technologies/features/challenges<ul><li>EMR view</li><li>Purging</li><li>Meditor Files</li><li>Other system generated files</li></ul></li><li>Understanding/access to MEDITECH programs/stored procedures used to calculate certain columns</li><li>Understanding of MEDITECH Magic, Client Server, and 6.x</li><li>Understanding of the hierarchical MEDITECH data structures used to house the data</li><li>SQL, specifically Microsoft SQL Server</li><li>Potentially (nice-to-have) working knowledge of basic ETL functions</li></ul><p><strong>Overview of Responsibilities:</strong></p><ul><li>We are ideally looking for someone to come on-site to our South Bend office for a couple of weeks to learn our process and the scope of the upcoming MEDITECH projects. After that, the ability to work 100% remote is possible.</li><li>This resource will be asked to create views to meet the customer requirement. Strong knowledge of MEDITECH and how all the data relates together is required to be successful in this role.</li><li>Depending on the scope of the extract (already provided from another vendor), this resource would, potentially, be responsible for creating system generated documents out of the MEDITECH database once extracted.</li><li>We will also rely on this resource to have a strong understanding of the calculated fields in MEDITECH and, potentially, have access to the logic itself and the ability to 'decode' it.</li><li>This resource would report to the Director of ETL &amp; Data Management</li><li>No MEDITECH extraction is required for this role - this includes NPR reports</li><li>All IP would become the property of Harmony Healthcare IT and we would be free to use it on future projects</li></ul><p>Company DescriptionHarmony Healthcare IT provides technology solutions for healthcare organizations by safeguarding protected clinical information, increasing productivity and maximizing cash flow. We specialize solely in healthcare technology - driving accessibility, security, efficiency and quality for our customers who rely on accurate clinical data to provide care for their patients. We are best known for our excellence in data extraction, migration and retention of healthcare records ensuring system reliability and data integrity 24/7. We are growing and seek to add key members to our team to help continue our mission of helping the healthcare system work better for everyone.</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
+  },
+  {
+    "id": "suAovQbzQza8VOQlGZXlOA",
+    "url": "http://jobmote.com/jobs/14555-senior-salesforce-consultant-engagement-manager-remote-position",
+    "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 23, 2018 1:21:39 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION) - Jobmote<div><div><h2>Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION)</h2><h5>Zennify</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p>Zennify is looking for a qualified candidate to join their team as a Senior Salesforce Consultant with a strong Financial Services Background. The individual will be responsible for managing strategic engagements with clients, including designing and delivering scalable solutions using Salesforce.com and other cloud-based technologies. The individual will work with a team to implement mid- and large-scale customer projects encompassing process analysis &amp; design, system requirements &amp; configuration, change management, training and deployment. Clients range from local, small and mid-sized companies to multi-national enterprise corporations and state and federal agencies.</p><p><strong>THIS IS A REMOTE POSITION.</strong> Zennify is headquartered in Boise, ID with another office located in Sacramento, CA. Working remote, candidates need to be prepared for up to 30% travel to both headquarters and client locations. Current clients are located in the West.</p><p>Must be eligible to work in the US as we are not currently sponsoring visas.</p><p><strong>Responsibilities</strong></p><p>· Lead delivery teams to execute all project implementation phases including project planning, requirements gathering, solution design, development, system and user testing, deployment, training and post go live support</p><p>· Manage customer relationships and day-to-day interactions &amp; escalations</p><p>· Oversee process driven customer conversations and workshops related to sales processes, customer service, marketing automation and operational processes</p><p>· Define project short and long-term goals, identify success criteria, and coordinate client and delivery resource roles and responsibilities</p><p>· Drive delivery teams to produce on­-time, high quality, scalable and suitable services and deliverables</p><p>· Contribute to pre-sales customer scoping sessions with the Business Development Team &amp; assist with project proposal development</p><p>· Contribute to a collaborative team environment by encouraging and leading solution brainstorming, internal knowledge sharing and skill development</p><p><strong>Qualities of the Ideal Candidate</strong></p><ul><li>Thrives in a team-based, high energy and fast-paced environment</li><li>Service-oriented and innately driven to produce outstanding customer satisfaction and results</li><li>Enjoys discovering, learning about and implementing new technologies</li><li>Analytical and prone to logically and methodically work through problems</li><li>Strong aptitude for prioritization and multi-tasking in a deadline-driven environment</li><li>A positive demeanor with exceptional interpersonal skills with respect to internal and external interactions and relationships</li><li>Ability to meet travel requirements, when applicable (no more than 20% travel expected)</li><li>A desire to proactively contribute to, and enhance, team outputs</li><li>Experience working in Financial Services or Banking</li><li>Working knowledge of integration software such as Mulesoft, Jitterbit, Informatica</li></ul><p><strong>Preferred Qualifications</strong></p><ul><li>One or more of the following Salesforce Certifications: Sales Cloud Consultant, Service Cloud Consultant, Community Cloud Consultant, Financial Services Cloud Accredidation</li><li>Strong Financial Services background</li><li>Experience working with one or more of the following platforms: Ncino, Core Logic, Orion, Loan Origination Systems</li><li>Understanding of Core Banking Systems (Fiserv, Symitar, etc)</li></ul><p>Company DescriptionAt Zennify, we know how to focus, build and balance. We know systems and can untangle even the most complex of technical messes to ensure everything is running in sync. Our expertise in the Salesforce suite of products has helped bring balance to hundreds of clients. We evaluate existing technologies, recommend unique cloud-based solutions and expertly build solutions. We take into account our clients' specific needs as well as their existing infrastructure to develop context laden, elegant solutions. Simply put, Zennify brings competing interests, incompatible systems and seemingly unlinked challenges into alignment to develop technology solutions that drive businesses forward. </p><p>Our team is comprised of gritty, passionate problem-solvers. We have the vision to create lasting, long-term solutions for our clients. Because we view our clients as partners, we're deeply invested in our work and the success of our projects. At Zennify, innovation is in our every breath. We're motivated to increase efficiencies and ultimately help the bottom line of our client's business. We dig deep. Zennify works hard to understand the needs of our clients and align those needs with working, effective solutions.</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
+  },
+  {
+    "id": "0tK7r4mjTGy2SiNXs-4bhQ",
+    "url": "https://remote.com/jobs/browse/preview/licensed-open-enrollment-benefit-counselor",
+    "title": "Licensed Open Enrollment Benefit Counselor",
+    "tags": [
+      "DBG:surround``OR(abl,will,challeng,flexibl,experi,get,prefer) 2W 2N(work,remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 15,
+      "maxValue": 50,
+      "info": "",
+      "unit": "HOUR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 22, 2018 4:33:53 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "JOB TYPE: Long Term<br />3+ months<br /><br />EXPERIENCE: intermediate<br /><br />Working remotely, guide and educate employees on available health and life benefits during their employer’s open enrollment season. Assist them in navigating through the selection of health and life benefits"
+  },
+  {
+    "id": "xcF-3H5aTLOLPzq8my5ayg",
+    "url": "https://remote.com/jobs/browse/preview/droid-builder-1",
+    "title": "Droid Builder",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/8",
+      "DBG_TECH1:k/t/w:android/mobile/16",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:java/java/6",
+      "DBG_TECH1:k/t/w:java/mobile/3",
+      "DBG_TECH1:k/t/w:jersey/java/16",
+      "DBG_TECH1:k/t/w:kotlin/mobile/5",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=26, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=4, java=30, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TECH1/mobile",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 20, 2018 7:39:47 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "JOB TYPE: Full time<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: 1Password; 50-200 employees; 75-100% remote;<br /><br />SKILLS:<br />• Android SDK<br />• Java<br />• Android Development<br /><br />1Password for Android is going through a growth spurt – it wants to throw on some cleats and hit the field. We've got a tight-knit team of Java developers working hard on releasing updates with rich new features, but we want to be able to run faster and score more goals in each development cycle. If you’ve been on the pitch practicing your skills, you just might be the one we’re looking for.<br /><br />What you might do<br /><br />- Implement new features and enhance existing ones.<br />- Squash bugs that managed to slip past Saad’s keen eye while he was fixing observing his hair.<br />- Work with 1Password users to figure out why the app is crashing for them, but not for you.<br />- Refactor older code to follow more modern design patterns.<br />- Create unit tests for existing code to run faster and more reliably.<br />- Write documentation so that all of our platforms are consistent and the support team can learn about all of the awesome things you've built.<br />- Help new and existing 1Passworders via email or on our forum.<br /><br />What you have<br /><br />- Admiration for team effort. Solo blockers, Jedis, and Rockstars need not apply: We work together. Okay maybe Jedis, just for this one.<br />- A close bond and experience with Java and the Android SDK.<br />- A passion for using Android in your daily life. You're not just visiting, you live here. You also know your way around macOS and can appreciate Windows and iOS – from a distance  <br />- Excitement for the unknown and humility to learn – we're agile, so new things are always ready to be passed (and sometimes dodged).<br />- A penchant for clean code that's easy to read.<br /><br />What you might also have<br /><br />- Personal experience with 1Password.<br />- Familiarity with setting up and maintaining continuous integration.<br />- A friendship with Kotlin, and practice making it part of an Android app.<br />- Chrome OS running on one of your devices, and experience building apps for it.<br /><br />If you're a match<br /><br />Sounding like a jersey you’d rock? Tell us what color your jersey is."
+  },
+  {
+    "id": "3EIveOsbQBKRad7oQXCOSQ",
+    "url": "http://workinstartups.com/job-board/job/70246/part-time-bookkeeper-at-school-space/",
+    "title": "Part Time Bookkeeper",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "GBP",
+      "minValue": 18000,
+      "maxValue": 23000,
+      "info": "",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 20, 2018 3:19:39 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "*Practical Details*<br /><br />Interview date: 9th/10th July 2018<br />Role start date: 1st August 2018<br />Salary range: £18,000 - £23,000 D.O.E and pro rata<br />Working hours: 0.5 FTE (18.75 hours/week) - flexibility around working pattern<br /><br /><br />*About School Space:*<br /><br />Schools are facing horrendous budget cuts so we help them to close the financial gap by letting their spaces out to community groups in the evenings/weekends. We run a 360° lettings service for the school - from growing the number of community users to staffing to finance to operations and beyond. We have recently given our £500,000th to our partner schools. <br /><br /><br />*About the role:*<br /><br />With over 1,500 events per month, 25 partner schools (and counting) and a remote team of 50+, you’ll be tying together the finances that keep School Space heading towards our mission of creating thriving schools at the centre of thriving communities. As part of our continued rapid expansion, we have an exciting opportunity for a Part-Time Bookkeeper, based either in our Oxford office or on a work from home basis. You’ll take ownership of our day-to-day financial operations and provide support to the directors and operations team.<br /><br /><br />*Key responsibilities include:*<br /><br />Day-to-day bookkeeping including A/R, A/P and bank reconciliations <br />Support the monthly, quarterly and annual financial reporting requirements of the group<br />Support financial operating metrics and ad-hoc financial analysis that will help to shape the way we run the business<br />Handle school and customer transactions, from invoicing to collections and payments <br />Administer payroll support to the HR function<br /><br />*Desired experience:*<br /><br />A solid and demonstrable understanding of finance and accounting principles<br />An accounting qualification (AAT or part qualified) or equivalent experience<br />Ability to work under pressure, delivering accurate, high quality work<br />Strong written and verbal communication skills with a keen eye for detail<br />Excellent working knowledge of MS Excel and related tools<br />Ideally you will have previous experience working with Xero"
+  },
+  {
     "id": "auoHY7lmQW-j3ebBMBAQNw",
     "url": "http://jobmote.com/jobs/14070-senior-salesforce-consultant-engagement-manager-remote-position",
     "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION)",
