--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "21aN9dcoRpql3owVeHOC3g",
+    "url": "https://angel.co/lookfwd/jobs/95055-chief-technical-officer-co-founder",
+    "title": "Chief Technical Officer (Co-Founder)",
+    "tags": [
+      "Berkeley",
+      "Cofounder",
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=7, mobile=28, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Stack Development",
+      "Mobile Developer",
+      "REMOTE1/50",
+      "Remote OK",
+      "San Francisco",
+      "Swift/Objective C/iOS/Xcode",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown",
+      "iOS Development"
+    ],
+    "tagsNames1": [
+      "50% remote"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 0,
+      "maxValue": 80000,
+      "info": "25.0% – 40.0%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 20, 2018 8:30:45 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Chief Technical Officer (Co-Founder) at LookFwd</h2><div>San Francisco, Berkeley, Remote · Cofounder</div><div></div></div><div><div>Skills</div><div>iOS Development, Full Stack Development, Swift/Objective C/iOS/Xcode</div><div>Compensation</div><div>$0K–$80K<br>25.0%–40.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>LookFwd let's you see friends' upcoming trips, chat about meeting up, recommendations and more! Think Twitter for trips! After scaling to thousands of users we are seeking a CTO (Co-Founder) to help us scale to millions of users.</p><p>Check us out!: <a href='https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8' rel='nofollow'>https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8</a></p><p>ABOUT US<br>- Invited to YC for final round interview last batch - top 7% of all startups that applied (Re-applying to next YC Batch)<br>- Pre-Seed Funding by Founder<br>- Thousands of active users- growing exponentially<br>- Rockstar UX, Marketing, Analytics, and Business Development team<br>- Completed the Berkeley SkyDeck Accelerator  </p><p>TEAM: <br>- Founder/CEO - PwC Technical Project Manager<br>- PM - Engineer at Apple<br>- UX/UI - Mobile Engineer at Progressly <br>- CMO - Consumer Marketing at Vine</p><p>REQUIREMENTS:<br>- Capable of being LookFwd's CTO and scaling the current LookFwd mobile application<br>- Highly productive, opinionated programmer with great product sense<br>- Excited to become a Co-Founder and work in an equity capacity<br>- Experience scaling a mobile application is a plus<br>- Currently located in the San Fransisco bay area or willing to move to upon raising our seed round</p><p>BENEFITS:<br>- Substantial Equity Compensation in a growing startup<br>- Ability to work remotely<br>- Flexible Schedule<br>- Work alongside talented team</p><p>About LookFwd:</p><p>LookFwd is a Berkeley-based startup that was started at the Haas School of Business, and as such has significant resources available to it as it continues to grow. LookFwd currently has multiple mentors including a former Yahoo VP Media Executive and a Y-Combinator Alumnus.</p></div>"
+  },
+  {
     "id": "stBp3fMGTCKOwE0hCi93dw",
     "url": "https://stackoverflow.com/jobs/193510/senior-native-ios-developer-temp-to-perm-sharpopen?a=12TD2mbIlfmU",
     "title": "Senior native iOS developer (temp to perm position) at #open  ",
@@ -614,6 +669,49 @@
     "published": "Apr 26, 2018 11:35:28 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<div><h2>Senior iOS Developer at Zyp</h2><div>New York City, Remote · Full Time</div></div><div><div>Compensation</div><div>$50K–$100K<br>0.0%–5.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>We are looking to hire full stack iOS developers who are available to start immediately. We are looking for someone who is smart, energetic, fun, creative and most importantly passionate about startups and the possibilities that the sharing economy and on-demand services have to offer. Being comfortable in a early stage startup is vitol to executing this position.</p></div>"
+  },
+  {
+    "id": "gQJFkVnCRiqC8TpkfYK9YA",
+    "url": "https://angel.co/photage-1/jobs/71624-junior-mobile-ios",
+    "title": "Junior Mobile iOS",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=8, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Time",
+      "Mobile Developer",
+      "REMOTE1/100",
+      "Remote OK",
+      "Salt Lake City",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 35000,
+      "maxValue": 60000,
+      "info": "0.0% – 0.5%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 25, 2018 8:24:39 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Junior Mobile iOS at Phötage </h2><div>Salt Lake City, Remote · Full Time</div><div></div></div><div><div>Compensation</div><div>$35K–$60K<br>0.0%–0.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>We have an opening for a junior developer that has experience with iOS or Android development. You should be an ambitious fast learner with a desire to make cool stuff.</p><p>You should posses the following characteristics:<br>-Be an active listener and Communicator <br>-Have a passion for problem solving and learning<br>-A self manager</p><p>Coding Abilities:<br>-Ability to continue development on previously created X-Code projects, and posses the ability to develop a project from the ground up.<br>-Ability to engage in modular coding<br>-Understanding of basic data structures and analysis of algorithm.<br>-Basic HTTP and RESTful</p></div>"
   }
 ]
 }
